--- a/.github/workflows/import.yml
+++ b/.github/workflows/import.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           AIRTABLE_API_TOKEN: ${{ secrets.AIRTABLE_API_TOKEN }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
-          AIRTABLE_TABLE_NAME: ${{ secrets.AIRTABLE_TABLE_NAME }}
+          AIRTABLE_CIS_TABLE_NAME: ${{ secrets.AIRTABLE_CIS_TABLE_NAME }}
           CIS_URL: "https://base-donnees-publique.medicaments.gouv.fr/download/file/CIS_bdpm.txt"
           DOWNLOAD_PATH: "data/CIS_bdpm.txt"
         run: python scripts/import_cis_bdpm_to_airtable.py
