--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-requests>=2.31.0
-python-dotenv>=1.0.1
+requests==2.32.3
+python-dotenv==1.0.1
+pandas==2.2.3
+openpyxl==3.1.5
+xlrd==2.0.1
+beautifulsoup4==4.12.3
+lxml==5.3.0
