--- a/.github/workflows/import.yml
+++ b/.github/workflows/import.yml
@@ -1,13 +1,17 @@
 name: run-import
 
 on:
-  schedule:
-    - cron: "0 1 5 * *"   # 01:00 UTC le 5 du mois
   workflow_dispatch:
+
+  # CRON en UTC
+  # Hiver (CET): 01:00 Paris = 00:00 UTC
+  schedule:
+    - cron: "0 0 4 * *"
 
 jobs:
   run-import:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -17,15 +21,22 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install deps
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run import (download + reset + enrich)
+      - name: Run import (download + inventory + enrich)
+        run: python scripts/import_and_enrich_bdpm_to_airtable.py
         env:
           AIRTABLE_API_TOKEN: ${{ secrets.AIRTABLE_API_TOKEN }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
           AIRTABLE_CIS_TABLE_NAME: ${{ secrets.AIRTABLE_CIS_TABLE_NAME }}
-        run: |
-          python scripts/import_cis_bdpm_to_airtable.py
+
+          # Optionnels (si tu veux)
+          STOP_ON_RCP_ERROR: "true"
+          AIRTABLE_SLEEP: "0.25"
+          AIRTABLE_MAX_RETRIES: "8"
+          RCP_TIMEOUT: "45"
+          RCP_MAX_RETRIES: "4"
+          RCP_SLEEP: "0.40"
