--- a/.github/workflows/import.yml
+++ b/.github/workflows/import.yml
@@ -1,4 +1,4 @@
-name: Import BDPM -> Airtable (mensuel)
+name: run-import
 
 on:
   workflow_dispatch:
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install deps
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -27,11 +27,5 @@ jobs:
           AIRTABLE_API_TOKEN: ${{ secrets.AIRTABLE_API_TOKEN }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
           AIRTABLE_CIS_TABLE_NAME: ${{ secrets.AIRTABLE_CIS_TABLE_NAME }}
-
-          # RCP behavior (modifiables dans les secrets/env si tu veux)
-          RCP_FETCH_ENABLED: "1"
-          RCP_STRICT: "1"
-          RCP_SLEEP: "0.25"
-          # RCP_MAX_PER_RUN: "0"
         run: |
           python scripts/import_and_enrich_bdpm_to_airtable.py
