--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,11 @@ beautifulsoup4==4.12.3
 python-dotenv==1.0.1
 lxml==5.3.0
 
-pandas==1.5.3
-xlrd==1.2.0
+# IMPORTANT : on évite numpy 2.x (source du crash)
+numpy==1.26.4
+pandas==2.2.3
+
 openpyxl==3.1.5
+
+# Lecture du .xls ANSM en "xlrd pur" (pas via pandas)
+xlrd==1.2.0
