--- a/.github/workflows/import.yml
+++ b/.github/workflows/import.yml
@@ -27,5 +27,9 @@ jobs:
           AIRTABLE_API_TOKEN: ${{ secrets.AIRTABLE_API_TOKEN }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
           AIRTABLE_CIS_TABLE_NAME: ${{ secrets.AIRTABLE_CIS_TABLE_NAME }}
+          PYTHONIOENCODING: utf-8
+          LANG: C.UTF-8
+          LC_ALL: C.UTF-8
+          
         run: |
           python scripts/import_and_enrich_bdpm_to_airtable.py
