--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   run-import:
     runs-on: ubuntu-latest
+    timeout-minutes: 90
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -20,16 +22,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install requests beautifulsoup4 lxml xlrd python-dotenv
 
       - name: Run import (download + inventory + enrich)
         env:
           AIRTABLE_API_TOKEN: ${{ secrets.AIRTABLE_API_TOKEN }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
-          AIRTABLE_CIS_TABLE_NAME: ${{ secrets.AIRTABLE_CIS_TABLE_NAME }}
-          PYTHONIOENCODING: utf-8
-          LANG: C.UTF-8
-          LC_ALL: C.UTF-8
-          
+          AIRTABLE_TABLE_NAME: ${{ secrets.AIRTABLE_TABLE_NAME }}
+          # Optionnel :
+          # AIRTABLE_VIEW: "Grid view"
+          # MAX_RCP_FETCH: "300"
         run: |
           python scripts/import_and_enrich_bdpm_to_airtable.py
