--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,15 +1,16 @@
 name: run-import
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: {}
   schedule:
-    - cron: "0 1 4 * *"
+    # Hiver (CET): 01:00 Paris = 00:00 UTC
+    - cron: "0 0 4 11,12,1,2,3 *"
+    # Été (CEST): 01:00 Paris = 23:00 UTC la veille
+    - cron: "0 23 3 4,5,6,7,8,9,10 *"
 
 jobs:
   run-import:
     runs-on: ubuntu-latest
-    timeout-minutes: 90
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -22,15 +23,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 lxml xlrd python-dotenv
+          pip install -r requirements.txt
 
       - name: Run import (download + inventory + enrich)
         env:
           AIRTABLE_API_TOKEN: ${{ secrets.AIRTABLE_API_TOKEN }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
           AIRTABLE_CIS_TABLE_NAME: ${{ secrets.AIRTABLE_CIS_TABLE_NAME }}
-          # Optionnel :
-          # AIRTABLE_VIEW: "Grid view"
-          # MAX_RCP_FETCH: "300"
         run: |
           python scripts/import_and_enrich_bdpm_to_airtable.py
