--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,13 @@ lxml==5.3.0
 # IMPORTANT : on évite numpy 2.x (source du crash)
 numpy==1.26.4
 pandas==2.2.3
-
 openpyxl==3.1.5
 
-# Lecture du .xls ANSM
+# Lecture du .xls ANSM en "xlrd pur" (pas via pandas)
 xlrd==2.0.1
 
-# PDF RCP (extraction texte)
-pdfminer.six==20231228
+# Extraction texte des PDF (ATC dans RCP EMA/ANSM)
+pymupdf==1.24.10
+
+# Optionnel : fallback PDF si PyMuPDF échoue (tu peux le garder ou l'enlever)
 pypdf==5.1.0
