--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 requests==2.32.3
 beautifulsoup4==4.12.3
-lxml==5.3.0
 python-dotenv==1.0.1
+lxml==5.3.0
 
 # IMPORTANT : on évite numpy 2.x (source du crash)
 numpy==1.26.4
 pandas==2.2.3
-
 openpyxl==3.1.5
 
 # Lecture du .xls ANSM
 xlrd==2.0.1
 
-# Extraction texte PDF (RCP/EMA)
-PyMuPDF==1.24.10
+# Extraction PDF (ATC dans les RCP EMA)
+PyMuPDF==1.24.14
+
+# Fallback PDF (optionnel mais utile)
 pypdf==5.1.0
