--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -32,3 +32,18 @@ jobs:
           AIRTABLE_CIS_TABLE_NAME: ${{ secrets.AIRTABLE_CIS_TABLE_NAME }}
         run: |
           python scripts/import_and_enrich_bdpm_to_airtable.py
+
+      # ✅ Nouveau : enrichissement ATC via téléchargement + lecture PDF (fallback)
+      - name: Enrich ATC from RCP PDF
+        env:
+          AIRTABLE_API_TOKEN: ${{ secrets.AIRTABLE_API_TOKEN }}
+          AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
+          # Le script atc attend AIRTABLE_TABLE_NAME -> on réutilise ton secret existant
+          AIRTABLE_TABLE_NAME: ${{ secrets.AIRTABLE_CIS_TABLE_NAME }}
+          # Noms des champs (si tes champs sont différents, adapte ici)
+          AIRTABLE_FIELD_CIS: "Code cis"
+          AIRTABLE_FIELD_ATC: "Code ATC"
+          AIRTABLE_FIELD_ATC_L4: "Code ATC (niveau 4)"
+          AIRTABLE_FIELD_RCP_LINK: "Lien vers RCP"
+        run: |
+          python -u src/enrich_atc_pdf.py
