--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,19 @@ beautifulsoup4==4.12.3
 python-dotenv==1.0.1
 lxml==5.3.0
 
-# IMPORTANT : on évite numpy 2.x
+# IMPORTANT : on évite numpy 2.x (source du crash)
 numpy==1.26.4
 pandas==2.2.3
 openpyxl==3.1.5
 
-# Lecture du .xls ANSM
+# Lecture du .xls ANSM en "xlrd pur" (pas via pandas)
 xlrd==2.0.1
 
-# Lecture PDF (RCP/EMA)
+# Lecture des RCP PDF (nécessaire pour extraire les ATC)
+PyMuPDF==1.24.14
+
+# Fallback PDF si besoin (certains PDFs passent mieux avec pypdf)
+pypdf==5.1.0
+
+# Optionnel mais utile si tu utilises une extraction alternative (ou debug)
 pdfminer.six==20231228
