--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ beautifulsoup4==4.12.3
 python-dotenv==1.0.1
 lxml==5.3.0
 
-# IMPORTANT : on évite numpy 2.x (source du crash)
+# IMPORTANT : on évite numpy 2.x
 numpy==1.26.4
 pandas==2.2.3
 
@@ -12,5 +12,11 @@ openpyxl==3.1.5
 # Lecture du .xls ANSM en "xlrd pur" (pas via pandas)
 xlrd==2.0.1
 
-# Lecture PDF (RCP EMA/ANSM) -> extraction ATC
+# Extraction texte PDF (indispensable pour trouver l'ATC dans les RCP EMA)
+pdfminer.six==20231228
+
+# Recommandé (ton script le teste; ça évite l'avertissement)
 PyMuPDF==1.24.14
+
+# Fallback si tu veux (optionnel)
+pypdf==5.1.0
