--- a/.github/workflows/run-import.yml
+++ b/.github/workflows/run-import.yml
@@ -16,18 +16,39 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
+          cache-dependency-path: requirements.txt
 
       - name: Install dependencies
+        timeout-minutes: 10
+        env:
+          PIP_DEFAULT_TIMEOUT: "120"
+          PIP_DISABLE_PIP_VERSION_CHECK: "1"
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -v --prefer-binary -r requirements.txt
+          python -c "import requests, bs4, lxml, pandas; print('deps ok')"
+
+      # Si tu veux garder OCR mais uniquement quand tu le demandes :
+      # - Déclare OCR_ENABLE=1 dans "Run workflow" (workflow_dispatch)
+      # - ou dans les env du job
+      - name: Install OCR dependencies (optional)
+        if: env.OCR_ENABLE == '1'
+        timeout-minutes: 10
+        env:
+          PIP_DEFAULT_TIMEOUT: "120"
+        run: |
+          pip install -v --prefer-binary Pillow==10.4.0 pytesseract==0.3.10
 
       - name: Run sync
+        timeout-minutes: 60
         env:
           AIRTABLE_API_TOKEN: ${{ secrets.AIRTABLE_API_TOKEN }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
           AIRTABLE_CIS_TABLE_NAME: ${{ secrets.AIRTABLE_CIS_TABLE_NAME }}
           AIRTABLE_MIN_DELAY_S: "0.25"
           UPDATE_FLUSH_THRESHOLD: "200"
+          # Mets 1 uniquement si tu veux tenter OCR (sinon laisse vide ou 0)
+          OCR_ENABLE: "0"
         run: |
-          python scripts/import_and_enrich_bdpm_to_airtable.py
+          python -u scripts/import_and_enrich_bdpm_to_airtable.py
