--- a/.github/workflows/run-import.yml
+++ b/.github/workflows/run-import.yml
@@ -20,7 +20,7 @@ jobs:
           cache-dependency-path: requirements.txt
 
       - name: Install dependencies
-        timeout-minutes: 10
+        timeout-minutes: 15
         env:
           PIP_DEFAULT_TIMEOUT: "120"
           PIP_DISABLE_PIP_VERSION_CHECK: "1"
@@ -29,16 +29,10 @@ jobs:
           pip install -v --prefer-binary -r requirements.txt
           python -c "import requests, bs4, lxml, pandas; print('deps ok')"
 
-      # Si tu veux garder OCR mais uniquement quand tu le demandes :
-      # - Déclare OCR_ENABLE=1 dans "Run workflow" (workflow_dispatch)
-      # - ou dans les env du job
-      - name: Install OCR dependencies (optional)
-        if: env.OCR_ENABLE == '1'
-        timeout-minutes: 10
-        env:
-          PIP_DEFAULT_TIMEOUT: "120"
+      - name: Install Playwright browsers
+        timeout-minutes: 15
         run: |
-          pip install -v --prefer-binary Pillow==10.4.0 pytesseract==0.3.10
+          python -m playwright install --with-deps chromium
 
       - name: Run sync
         timeout-minutes: 60
@@ -48,7 +42,6 @@ jobs:
           AIRTABLE_CIS_TABLE_NAME: ${{ secrets.AIRTABLE_CIS_TABLE_NAME }}
           AIRTABLE_MIN_DELAY_S: "0.25"
           UPDATE_FLUSH_THRESHOLD: "200"
-          # Mets 1 uniquement si tu veux tenter OCR (sinon laisse vide ou 0)
-          OCR_ENABLE: "0"
+          RCP_MAX_PER_RUN: "50"
         run: |
           python -u scripts/import_and_enrich_bdpm_to_airtable.py
